# B_2216_1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.mock/: openapi.yml
health-chairFW/: Ble.h  Hx711.h  Save.h  Wifi.h  health-chairFW.ino
processing/posture/: posture.pde
src/: apns.py  crud.py  database.py  env_vars.py  main.py  models.py  requirements.txt  schemas.py  sql_test.py  timedata_handler.py
src/dependencies/: db.py
src/routers/: datas.py  tests.py  users.py
