[tool.poetry]
name = "jphacks2022-api"
version = "0.1.0"
description = ""
authors = ["Sosuke Hosokawa <so298go@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
gunicorn = "^20.1.0"
sqlalchemy = "^1.4.42"
python-dotenv = "^0.21.0"
aiosqlite = "^0.17.0"
greenlet = "^1.1.3.post0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
